# thunderstorm

./: .gitignore  README.md  bun.lockb  declaration.d.ts  package.json  tsconfig.json
.github/workflows/: main.yml  release.yaml
src/: App.tsx  globals.d.ts  index.scss  index.tsx  palette.scss  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: actions.rs  api.rs  consts.rs  errors.rs  invokes.rs  levenshtein.rs  main.rs  reader.rs  state.rs  stream.rs  utils.rs  writer.rs
src-tauri/src/io/: consts.rs  mod.rs  reader.rs  secure_reader.rs  secure_writer.rs  writer.rs
src-tauri/src/state/: bin.rs  errors.rs  mod.rs  model.rs  readers.rs  writers.rs
src/components/: boxicon.module.scss  boxicon.tsx  content.module.scss  content.tsx  delete.module.scss  delete.tsx  error.module.scss  error.tsx  file.tsx  footer.module.scss  footer.tsx  header.module.scss  header.tsx  modal.tsx  settings.module.scss  settings.tsx
src/styles/: content.module.scss  file.module.scss  header.module.scss
