[package]
name = "thunderstorm"
version = "0.0.2"
description = "Yet another discord storage client"
authors = ["0x7030676e31"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["os-all", "dialog-save", "dialog-open"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1.0.117"
log = "0.4.21"
pretty_env_logger = "0.5.0"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
crc32fast = "1.4.2"
rand = "0.8.5"
bincode = "1.3.3"
serde_bytes = "0.11.14"
aes-gcm = "0.10.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
